@@ -1,3 +1,13 @@
+2005-03-08  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* sol.h:
+	* sol.c:
+	* dialog.c: Ensure the timer restarts after an undo from the end
+	of game dialog.
+
+	* events.c: Ensure game_in_progress is set properly when the end
+	of game dialog appears. Bug #169462.
+
 2005-02-10  Callum McKenzie  <callum@physics.otago.ac.nz>
 
         * rules/helsinki.scm
